fix spacing on keys svg

--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -69,7 +69,7 @@ canvas {
 }
 
 .controls {
-  font-size: 30px;
+  font-size: 36px;
   margin-bottom: 10px !important;
 }
 
